// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`formatCheckReport golden fixtures well grounded, no threshold (omits run passes/fails) 1`] = `
"pickled check
───────────────────────────────────────────────────────
Tool: t
Sources: [readme]
Questions: 1

Question: s
  ✓ Well grounded (100%)
  cited: [readme]

───────────────────────────────────────────────────────
Overall: 100 / 100
Every answer met its checks."
`;

exports[`formatCheckReport golden fixtures threshold pass: well grounded with threshold 80 1`] = `
"pickled check
───────────────────────────────────────────────────────
Tool: t
Sources: [readme]
Questions: 1

Question: s
  ✓ Well grounded (100%)
  cited: [readme]

───────────────────────────────────────────────────────
Overall: 100 / 100 · threshold 80 · run passes
Every answer met its checks."
`;

exports[`formatCheckReport golden fixtures partially grounded scenario 1`] = `
"pickled check
───────────────────────────────────────────────────────
Tool: t
Sources: [readme]
Questions: 1

Question: s
  ⚠ Partially grounded (65%)
  reason: All required sources cited: readme
  cited: [readme]

───────────────────────────────────────────────────────
Overall: 33 / 100
Review the answers that fell short of their checks."
`;

exports[`formatCheckReport golden fixtures ungrounded scenario (NO, missing citation) 1`] = `
"pickled check
───────────────────────────────────────────────────────
Tool: t
Sources: [readme]
Questions: 1

Question: s
  ✗ Ungrounded (0%)
  reason: No required sources cited
  missing: [readme]

───────────────────────────────────────────────────────
Overall: 0 / 100
Review the answers that fell short of their checks."
`;

exports[`formatCheckReport golden fixtures matrix targets: same scenario run against two targets 1`] = `
"pickled check
───────────────────────────────────────────────────────
Tool: t
Sources: [readme]
Questions: 2

Question: Installation
  [quick] ✓ Well grounded (100%)
    cited: [readme]
  [thorough] ✓ Well grounded (100%)
    cited: [readme]

───────────────────────────────────────────────────────
Overall: 100 / 100
Every answer met its checks."
`;
